force-app/main/default/objects/QTB_Category_Tax_Treatment_Condition_Map__mdt/QTB_Category_Tax_Treatment_Condition_Map__mdt.object-meta.xml
<CustomObject>
    <label>Category Tax Treatment Condition Map</label>
    <pluralLabel>Category Tax Treatment Condition Maps</pluralLabel>
</CustomObject>