force-app/main/default/objects/QTB_Category_Tax_Treatment_Condition_Map__mdt/fields/Account_Special_Tax_Condition__c.field-meta.xml
<CustomField>
    <fullName>Account_Special_Tax_Condition__c</fullName>
    <label>Account Special Tax Condition</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>