force-app/main/default/objects/QTB_Category_Tax_Treatment_Condition_Map__mdt/fields/QTB_TaxExempt__c.field-meta.xml
<CustomField>
    <fullName>QTB_TaxExempt__c</fullName>
    <description>#Gitlab 19786 For capturing the Account Tax exempt value</description>
    <label>Tax Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>