force-app/main/default/objects/QTB_Category_Tax_Treatment_Condition_Map__mdt/fields/Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category__c</fullName>
    <label>Tax Category</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>